[package]
name = "tinygrib"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
thiserror = "2.0.12"

[profile.release-lto]
inherits = "release"
opt-level = 3
lto = true

[dev-dependencies]
itertools = "0.14.0"
indexmap = "2.9.0"
japanmesh = "0.1.1"
bincode = "2.0.1"
flate2 = "1.1.1"
prost = "0.13.5"
i_overlay = "2.2.0"
bytesize = "2.0.1"
tinymvt = "0.2.1"
foldhash = "0.1.5"
scoc = { git = "https://github.com/MIERUNE/scoc.git" }
